[package]
name = "ootle_serde"
version = "0.2.0"
description = "serde utilities for Tari Ootle"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true, optional = true, features = ["std", "serde"] }

serde = { workspace = true }
base64 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tari_template_lib = { workspace = true }
minicbor-serde = { workspace = true, features = ["std", "alloc"] }

[features]
default = ["hex", "cbor"]
hex = ["dep:hex"]
cbor = ["dep:tari_bor"]
base64 = ["dep:base64"]