[package]
name = "tari_ootle_p2p"
description = "The Tari message types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true }
tari_consensus = { workspace = true }
tari_consensus_types = { workspace = true }
tari_crypto = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_engine_types = { workspace = true }
tari_networking = { workspace = true }
tari_template_lib = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_jellyfish = { workspace = true }

libp2p-identity = { workspace = true, features = ["sr25519", "serde", "peerid"] }

anyhow = { workspace = true }
serde = { workspace = true, default-features = true }
prost = { workspace = true }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }

[build-dependencies]
proto_builder = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    # Used via OUT_DIR macro, not detectable
    "prost",
]

[features]
ts = ["ts-rs"]
