[package]
name = "tari_rpc_state_sync"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_consensus = { workspace = true }
tari_consensus_types = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_p2p = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_epoch_manager = { workspace = true }
tari_rpc_framework = { workspace = true }
tari_state_tree = { workspace = true }
tari_template_manager = { workspace = true }
tari_validator_node_rpc = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
